# zpool-exporter-textfile

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_rust.yml  dependabot_regenerate_sri.yml  nix.yml  nix_update.yml
nixos/: default.nix
src/: main.rs
