[package]
edition = '2018'
name = "zpool-exporter-textfile"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/zpool-exporter-textfile"
readme = "README.md"
description = "prometheus exporter for zpool statuses"
documentation = "https://docs.rs/zpool-exporter-textfile"

[badges]
travis-ci = { repository = "antifuchs/zpool-exporter-textfile", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
libzetta = "0.5.0"
prometheus = "0.13.4"
tempfile = "3.10.1"
clap = { version = "4.5.17", features = ["derive"] }
